# AuRo

./: .gitignore  README.md  install.sh
.github/workflows/: ros1.yml  setup-ros.yml
excercise_1/: CMakeLists.txt  package.xml
excercise_1/launch/: excercise_1.launch
exercise_1/: CMakeLists.txt  package.xml
exercise_1/launch/: exercise_1.launch
exercise_2/: CMakeLists.txt  package.xml
husky_highlevel_controller/: CMakeLists.txt  package.xml
husky_highlevel_controller/action/: HuskyMotionController.action
husky_highlevel_controller/config/: config.rviz  config.yaml
husky_highlevel_controller/include/husky_highlevel_controller/: Algorithm.hpp  HuskyActionClient.hpp  HuskyHighlevelController.hpp  HuskyMotionController.hpp  HuskySensorEvaluation.hpp  hello_world.hpp  husky_highlevel_controller_publisher.hpp  husky_highlevel_controller_subscriber.hpp  listener.hpp  talker.hpp
husky_highlevel_controller/launch/: husky_highlevel_controller.launch
husky_highlevel_controller/msg/: PillarMsg.msg  WallRoute.msg
husky_highlevel_controller/src/: Algorithm.cpp  HuskyActionClient.cpp  HuskyHighlevelController.cpp  HuskyMotionController.cpp  HuskySensorEvaluation.cpp  hello_world.cpp  hello_world_node.cpp  husky_action_client_node.cpp  husky_highlevel_controller_node.cpp  husky_highlevel_controller_publisher.cpp  husky_highlevel_controller_publisher_node.cpp  husky_highlevel_controller_subscriber.cpp  husky_highlevel_controller_subscriber_node.cpp  husky_motion_controller_node.cpp  husky_sensor_evaluation_node.cpp  listener.cpp  listener_node.cpp  talker.cpp
husky_highlevel_controller/worlds/: wall.world
husky_highlevel_controller_msgs/: CMakeLists.txt  package.xml
husky_highlevel_controller_msgs/action/: HuskyMotionController.action
husky_highlevel_controller_msgs/msg/: Cancel.msg  HuskyMove.msg
husky_slam_navigation/: CMakeLists.txt  package.xml
husky_slam_navigation/config/: rviz.rviz
husky_slam_navigation/launch/: amcl_move_base.launch  husky_slam_navigation.launch  map_creation.launch
