<?xml version="1.0"?>
<package format="2">
  <name>husky_highlevel_controller</name>
  <version>0.0.1</version>
  <description>The husky_highlevel_controller package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="andreas.roth@htwg-konstanz.de">Andreas Roth</maintainer>
  <maintainer email="sebastian.hofmaier@htwg-konstanz.de">Sebastian Hofmaier</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">https://github.com/Andrew1021/AuRo</url>
  <url type="repository">https://github.com/Andrew1021/AuRo/tree/main/husky_highlevel_controller</url>
  <url type="bugtracker">https://github.com/Andrew1021/AuRo/issues</url>


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <author email="an721rot@htwg-konstanz.de">Andreas Roth</author>
  <author email="se741hof@htwg-konstanz.de">Sebastian Hofmaier</author>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <!-- <depend>std_msgs</depend>
  <depend>message_generation</depend> -->
  <depend>husky_highlevel_controller_msgs</depend>
  <!-- <depend>message_runtime</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>  -->
  <depend>std_srvs</depend>
  
  
  <!--   Note that this is equivalent to the following: -->
  
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>roscpp</build_depend> -->
  
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <build_depend>roslint</build_depend>
  
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->

  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  
  <!-- Use buildtool_depend for build tool packages: -->
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
